@@ -1,3 +1,7 @@
+== televideo (0.45) - 2010/11/07 ==
+	* fixed weird bug when home page was set to 100
+	* fixed backward search if a page is not found
+
 == televideo (0.44) - 2010/04/19 ==
 	* added feature to choose default action when a page is not found
 	* fixed small graphical bug when clicking Stop button
